--- a/src/app/pages/lesson/practice/practice.html
+++ b/src/app/pages/lesson/practice/practice.html
@@ -17,6 +17,12 @@
         onmousemove="this.style.height = 'auto'; this.style.height = this.scrollHeight + 'px';"
         [disabled]="currentView().content.score || loading"
       ></textarea>
+      @if (currentView().content.score) {
+        <div class="w-full my-2 text-gray-500">
+          <strong><em>Feedback: </em></strong>
+          <markdown class="" [data]="question.essay_feedback"></markdown>
+        </div>
+      }
     } @else {
       @for (option of question.options; track option.id) {
         <div>
@@ -30,11 +36,20 @@
             (change)="toggleSelectOption(option.id)"
             [disabled]="currentView().content.score || loading"
           >
-          <label [for]="option.id" class="text-gray-600 cursor-pointer">
+          <label 
+            [for]="option.id" 
+            [class]="`text-gray-600 cursor-pointer 
+            ${currentView().content.score ? (option.correct ? 'text-green-600' : (option.selected? 'text-red-600' : '')) : ''}`"
+            >
             <!-- <markdown class="inline" [data]="option.text"></markdown> -->
             {{option.text}}
           </label>
         </div>
+        @if (currentView().content.score) {
+          <div class="w-full my-1 text-gray-500">
+            <strong><em><markdown class="" [data]="option.explanation"></markdown></em></strong>
+          </div>
+        }
       }
     }
   </div>
