--- a/src/app/pages/lesson/lesson-page/lesson-page.html
+++ b/src/app/pages/lesson/lesson-page/lesson-page.html
@@ -15,7 +15,7 @@
     <div class="text-3xl flex flex-col text-gray-800 text-right tracking-wider font-medium">
       <span>Score:</span>
       <span>
-        @if (currentView.content.score) {
+        @if (!(currentView.content.score == null)) {
           {{currentView.content.score}} / {{currentView.content.questions.length}}
         } @else {
           Not Graded
@@ -55,7 +55,7 @@
   </div>
 
   <app-chatbot 
-    [class]="`w-3/12 absolute right-0 top-0 h-screen ${(chatOpen && !(currentView.type !== 'subtopic' && !currentView.content.score)) ? '' : 'hidden'}`" 
+    [class]="`w-3/12 absolute right-0 top-0 h-screen ${(chatOpen && !(currentView.type !== 'subtopic' && (currentView.content.score == null))) ? '' : 'hidden'}`" 
     [chatHistory]="chatHistory" 
     [subjectId]="subjectId"
     [metadata]="chatMetadata"
@@ -65,9 +65,9 @@
 
 <button 
   [class]="`absolute right-24 bottom-16 rounded-full p-6 bg-prussian-blue-200 hover:bg-prussian-blue-250 
-  ${(chatOpen || (currentView.type !== 'subtopic' && !currentView.content.score)) ? 'hidden' : ''}`" 
+  ${(chatOpen || (currentView.type !== 'subtopic' && (currentView.content.score == null))) ? 'hidden' : ''}`" 
   (click)="toggleChatPopup()"
-  [disabled]="(currentView.type !== 'subtopic' && !currentView.content.score)"
+  [disabled]="(currentView.type !== 'subtopic' && (currentView.content.score == null))"
 >
   <img src="images/chat-popup-icon.svg" alt="Chat" class="w-10">
 </button>
